--- a/backend-patientor/package.json
+++ b/backend-patientor/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",
-    "start": "node build/index.js"
+    "dev": "ts-node-dev src/index.ts",
+    "start": "node src/build/index.js"
   },
   "author": "",
   "license": "ISC",
